--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 h1 {
-  font-family: 'Luckiest Guy';font-size: 62px;
-  color:chartreuse;
+  font-family: 'Luckiest Guy';
+  font-size: 76px;
+  color: chartreuse;
   text-shadow: 1px 2px 10px black;
 }
