--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -1,4 +1,4 @@
 <form action="">
-<input type="search" name="" id="">
-<button>Search</button>
-</form>>
+<input type="search"  placeholder="Enter your email....">
+<button type="submit" class="inputField">Submit</button>
+</form>
