--- a/src/app/searchbar/searchbar.component.css
+++ b/src/app/searchbar/searchbar.component.css
@@ -2,11 +2,13 @@ form {
   display: flex;
   flex-direction: row;
   border-radius: 0px 20px 20px 0px;
-  border:solid #eee;
-  width: 300px;
+  border: 1px solid darkgrey;
+  width: 600px;
   margin: 30px;
   padding: 2px;
-  height: 30px;
+  height: 50px;
+  font-family: 'Annie Use Your Telescope';font-size: 22px;
+
   
 }
 input {
@@ -16,12 +18,20 @@ input {
   padding: 10px;
   border: none;
   outline-style: none;
+  font-family: 'Annie Use Your Telescope';font-size: 22px;
+
 }
 
 button {
-  width: 30%;
+  width: 156px;
+  height: 50px;
   border-radius: 0px 20px 20px 0px;
   color: #fff;
   background: linear-gradient(to bottom     left,forestgreen, chartreuse);
   border: none;
+  font-family: 'Luckiest Guy';
+  font-size: large;
+  text-shadow: 1px 2px 10px black;
+
+
 }
