--- a/src/app/searchbar/searchbar.component.html
+++ b/src/app/searchbar/searchbar.component.html
@@ -1,4 +1,4 @@
 <form action="">
-<input type="search"  placeholder="Enter your email....">
-<button type="submit" class="inputField">Submit</button>
+<input type="search"  placeholder="Enter Character Here....">
+<button type="submit">Search</button>
 </form>
